# comfyui-ollama

./: .env.example  .gitignore  CHANGE_LOG.md  ComfyUI_Ollama.py  ComfyuiOllama.py  CompfyuiOllama.py  OllamaSongwriterV3.py  README.md  V1_nodes.md  __init__.py  deprecated_nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
example_workflows/: ollama-chained-generation.json  ollama-chat-prompt-enhancement(1).json  ollama-chat-vision.json  ollama-chat.json  ollama-prompt-enhancement.json  ollama-structured-output.json  ollama-text.json  ollama-vision.json
saved_context/: .keep
web/js/: OllamaNode.js
