[project]
name = "comfyui-ollama"
description = "Custom ComfyUI Nodes for interacting with [a/Ollama](https://ollama.com/) using the [a/ollama python client](https://github.com/ollama/ollama-python).\nIntegrate the power of LLMs into CompfyUI workflows easily."
version = "2.0.7"
license = { file = "LICENSE" }
dependencies = ["ollama"]

[project.urls]
Repository = "https://github.com/stavsap/comfyui-ollama"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "stavsap"
DisplayName = "comfyui-ollama"
Icon = ""
